updated: added photos and styling udpates

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container">
           <h2 class="section-title hidden">💫 About Me</h2>
           <div class="about-content hidden">
-            <ul>
+            <ul class="about-list">
               <li><span>🌍</span> I'm based in Portugal</li>
               <li><span>🧠</span> I'm learning Docker and AWS</li>
               <li>
