--- a/index.html
+++ b/index.html
@@ -17,9 +17,21 @@
 
     <nav>
       <div class="container">
-        <a href="#home" class="logo">Nuno Araújo</a>
+        <!-- UPDATED: SVG Logo -->
+        <a href="#home" class="logo">
+          <svg
+            class="logo-svg"
+            viewBox="0 0 105 40"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <text x="0" y="30">
+              <tspan class="logo-brackets">&lt;</tspan>
+              <tspan class="logo-text">NA</tspan>
+              <tspan class="logo-brackets">/&gt;</tspan>
+            </text>
+          </svg>
+        </a>
         <ul>
-          <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#hobbies">Hobbies</a></li>
           <li><a href="#stack">Tech Stack</a></li>
@@ -80,7 +92,6 @@
         </div>
       </section>
 
-      <!-- HOBBIES SECTION MOVED HERE -->
       <section id="hobbies">
         <div class="container">
           <h2 class="section-title hidden">My Hobbies</h2>
