--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
     <nav>
       <div class="container">
-        <!-- UPDATED: SVG Logo -->
         <a href="#home" class="logo">
           <svg
             class="logo-svg"
@@ -113,6 +112,7 @@
           <h2 class="section-title hidden">💻 Tech Stack</h2>
           <div class="stack-grid">
             <div class="stack-category hidden" data-tech="backend">
+              <canvas class="particle-burst-canvas"></canvas>
               <h3>💾 Backend</h3>
               <div class="tech-badges">
                 <img
@@ -141,6 +141,7 @@
             </div>
 
             <div class="stack-category hidden" data-tech="frontend">
+              <canvas class="particle-burst-canvas"></canvas>
               <h3>👨‍💻 Frontend</h3>
               <div class="tech-badges">
                 <img
@@ -173,6 +174,7 @@
             </div>
 
             <div class="stack-category hidden" data-tech="version-control">
+              <canvas class="particle-burst-canvas"></canvas>
               <h3>🎠 Version Control & CI/CD</h3>
               <div class="tech-badges">
                 <img
@@ -193,6 +195,7 @@
             </div>
 
             <div class="stack-category hidden" data-tech="cloud">
+              <canvas class="particle-burst-canvas"></canvas>
               <h3>☁️ Cloud</h3>
               <div class="tech-badges">
                 <img
